[gd_scene load_steps=45 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SoundEffectStream.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Sprites/dyingPlayercharacter.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Punch 1 (flesh).ogg" type="AudioStream" id=4]
[ext_resource path="res://Player/Sprites/MainCharacterLightSprite.png" type="Texture" id=5]
[ext_resource path="res://Player/Sprites/hitstunPlayercharacter.png" type="Texture" id=6]
[ext_resource path="res://Player/Sprites/PunchSpriteSheet.png" type="Texture" id=7]
[ext_resource path="res://Player/Sprites/walkCycleMaincharacer (1).png" type="Texture" id=8]
[ext_resource path="res://Player/Sprites/HeavyAttack2.png" type="Texture" id=9]
[ext_resource path="res://Player/Sprites/MaincharacterConcept.png" type="Texture" id=10]
[ext_resource path="res://Player/Sprites/blockingSpriteSheet.png" type="Texture" id=11]
[ext_resource path="res://Player/Sprites/idlestancePlayerCharacter.png" type="Texture" id=12]
[ext_resource path="res://Player/Sprites/walkCycleMaincharacerFixed.png" type="Texture" id=13]
[ext_resource path="res://Player/Sprites/SpecialAttackSprite.png" type="Texture" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 26.6944
height = 34.1381

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.5412
height = 32.6127

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.9537, 3 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 102, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 204, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 306, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 408, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 510, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 612, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 714, 0, 102, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 150, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 150, 100 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 2.5
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Punch",
"speed": 5.0
} ]

[sub_resource type="Animation" id=19]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 52, 37, 45, 98 ), Rect2( 170, 49, 63, 82 ), Rect2( 296, 64, 93, 67 ), Rect2( 430, 105, 114, 28 ), Rect2( 592, 111, 115, 22 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ), Vector2( -1, -25 ), Vector2( -1, -19 ), Vector2( -1, 0 ), Vector2( -1, 2 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 482, 37, 63, 97 ), Rect2( 571, 36, 76, 98 ), Rect2( 668, 36, 79, 98 ), Rect2( 482, 37, 63, 97 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HurtArea/Collision2ndPunch:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite/HurtArea/CollisionPunch:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("SoundEffectStream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0404028,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.198121 )
}

[sub_resource type="Animation" id=21]
resource_name = "Guard"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 187, 24, 65, 100 ), Rect2( 47, 24, 65, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ) ]
}

[sub_resource type="Animation" id=22]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 29, 26, 54, 99 ), Rect2( 250, 28, 57, 97 ), Rect2( 379, 27, 85, 98 ), Rect2( 520, 22, 64, 103 ), Rect2( 250, 28, 57, 97 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("SoundEffectStream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.4 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("SoundEffectStream:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/HurtArea/CollisionKickShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=23]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 50, 30, 65, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -31 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 25, 65, 100 ), Rect2( 95, 30, 65, 98 ), Rect2( 180, 34, 65, 92 ), Rect2( 95, 30, 65, 98 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 39, 0, 65, 100 ), Rect2( 197, 1, 65, 99 ), Rect2( 337, 2, 76, 98 ), Rect2( 471, 0, 98, 100 ), Rect2( 629, 0, 77, 100 ), Rect2( 787, 3, 63, 97 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/HurtArea/CollisionPunch:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("SoundEffectStream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.3 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("SoundEffectStream:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=26]
resource_name = "Special"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 50, 46, 107 ), Rect2( 185, 49, 48, 107 ), Rect2( 301, 50, 39, 103 ), Rect2( 394, 50, 65, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 506, 48, 149, 103 ), Rect2( 678, 49, 149, 103 ), Rect2( 864, 49, 149, 103 ), Rect2( 1045, 48, 149, 103 ), Rect2( 394, 50, 65, 103 ), Rect2( 301, 50, 39, 103 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 3.1, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, -35 ), Vector2( -1, -35 ), Vector2( 14, -35 ), Vector2( 56, -35 ), Vector2( 15, -35 ), Vector2( -1, -35 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 27, 0, 56, 100 ), Rect2( 130, 0, 43, 100 ), Rect2( 215, 2, 43, 98 ), Rect2( 310, 2, 48, 98 ), Rect2( 424, 0, 52, 100 ), Rect2( 545, 0, 52, 100 ), Rect2( 666, 0, 47, 100 ), Rect2( 799, 0, 41, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ), Vector2( -1, -31 ) ]
}

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 20, 7 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 17.0951, 7.22027 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 19.4753, 10 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
gravity = 0.0
collision_mask = 2

[node name="CharacterHitbox_Main" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.58931, -31.7267 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.10249, -31.3088 )
shape = SubResource( 2 )

[node name="CharacterDetector_Boundaries" type="CollisionShape2D" parent="."]
position = Vector2( -0.173309, 14.6132 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.811295, -31.1036 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 18 )
animation = "Punch"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 19 )
"anims/Double Punch" = SubResource( 20 )
anims/Guard = SubResource( 21 )
"anims/Heavy Attack" = SubResource( 22 )
anims/Hurt = SubResource( 23 )
anims/Idle = SubResource( 24 )
anims/Punch = SubResource( 25 )
anims/Special = SubResource( 26 )
anims/Walk = SubResource( 27 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -31 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 52, 37, 45, 98 )

[node name="HurtArea" type="Area2D" parent="Sprite"]
position = Vector2( 1, 31 )
gravity = 0.0
collision_layer = 2
collision_mask = 4

[node name="CollisionPunch" type="CollisionShape2D" parent="Sprite/HurtArea"]
position = Vector2( 29.3462, -57.3518 )
shape = SubResource( 28 )
disabled = true

[node name="Collision2ndPunch" type="CollisionShape2D" parent="Sprite/HurtArea"]
position = Vector2( 21.6912, -57.7319 )
shape = SubResource( 29 )
disabled = true

[node name="CollisionKickShape" type="CollisionShape2D" parent="Sprite/HurtArea"]
position = Vector2( 22.0486, -20.4737 )
shape = SubResource( 30 )
disabled = true

[node name="SoundEffectStream" parent="." instance=ExtResource( 2 )]

[node name="player" type="Node" parent="."]

[node name="transition" type="Timer" parent="."]
wait_time = 3.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Sprite/HurtArea" to="." method="_on_HurtArea_area_entered"]
[connection signal="timeout" from="transition" to="." method="_on_transition_timeout"]
